fixed nav alignment

--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -37,7 +37,7 @@ li:hover {
 
 ul {
   position: relative;
-  top: 200px;
+  top: 100px;
 }
 
 a {
@@ -59,6 +59,10 @@ a {
   float: left;
 }
 
+.about {
+  margin-top: 150px;
+}
+
 img {
   text-align: center;
   position: relative;
@@ -68,6 +72,9 @@ img {
 
 nav h3 {
   text-align: center;
-  position: relative;
-  left: 15px;
+}
+
+hr {
+  border-top: 10px solid white;
+  float: left;
 }
